--- a/src/Providers/FileTime.Providers.Local/FileTime.Providers.Local.csproj
+++ b/src/Providers/FileTime.Providers.Local/FileTime.Providers.Local.csproj
@@ -4,6 +4,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
