--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -43,6 +43,23 @@
             "problemMatcher": "$msCompile"
         },
         {
+            "label": "publish singlefile windows",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "publish",
+                "${workspaceFolder}/src/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
+                "-p:PublishSingleFile=true",
+                "-c",
+                "Release",
+                "-r",
+                "win-x64",
+                "--self-contained",
+                "true"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
             "label": "watch",
             "command": "dotnet",
             "type": "process",
