--- a/src/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj
+++ b/src/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj
@@ -4,6 +4,7 @@
     <ProjectReference Include="..\Providers\FileTime.Providers.Local\FileTime.Providers.Local.csproj" />
     <ProjectReference Include="..\FileTime.ConsoleUI.App\FileTime.ConsoleUI.App.csproj" />
     <ProjectReference Include="..\FileTime.App.Core\FileTime.App.Core.csproj" />
+    <ProjectReference Include="..\FileTime.App.Style\FileTime.App.Style.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
