--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/src/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
+                "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/src/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
+                "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -31,7 +31,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/src/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
+                "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
                 "-p:PublishSingleFile=true",
                 "-c",
                 "Release",
@@ -48,7 +48,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/src/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
+                "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
                 "-p:PublishSingleFile=true",
                 "-c",
                 "Release",
@@ -66,7 +66,7 @@
             "args": [
                 "watch",
                 "run",
-                "${workspaceFolder}/src/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
+                "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
