--- a/src/GuiApp/FileTime.Avalonia/appsettings.Development.json
+++ b/src/GuiApp/FileTime.Avalonia/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "Serilog": {
-    "MinimalLevel": {
+    "MinimumLevel": {
       "Default": "Debug",
       "Override": {
         "Microsoft": "Information",
