--- a/src/Core/FileTime.Core/FileTime.Core.csproj
+++ b/src/Core/FileTime.Core/FileTime.Core.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\AppCommon\FileTime.App.Style\FileTime.App.Style.csproj" />
     <ProjectReference Include="..\AsyncEvent\AsyncEvent.csproj" />
   </ItemGroup>
