--- a/src/Providers/FileTime.Providers.Smb/FileTime.Providers.Smb.csproj
+++ b/src/Providers/FileTime.Providers.Smb/FileTime.Providers.Smb.csproj
@@ -5,9 +5,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\FileTime.Core\FileTime.Core.csproj"/>
+    <ProjectReference Include="..\..\Core\FileTime.Core\FileTime.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="SMBLibrary" Version="1.4.8"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="SMBLibrary" Version="1.4.8" />
   </ItemGroup>
 </Project>
