--- a/src/GuiApp/FileTime.Avalonia/FileTime.Avalonia.csproj
+++ b/src/GuiApp/FileTime.Avalonia/FileTime.Avalonia.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ApplicationIcon>Assets\filetime.ico</ApplicationIcon>
+    <Version>0.0.1</Version>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <DebugSymbols>true</DebugSymbols>
