--- a/src/Core/FileTime.Core/FileTime.Core.csproj
+++ b/src/Core/FileTime.Core/FileTime.Core.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
