Recursive container size scan

--- a/src/GuiApp/FileTime.Avalonia/FileTime.Avalonia.csproj
+++ b/src/GuiApp/FileTime.Avalonia/FileTime.Avalonia.csproj
@@ -47,6 +47,7 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Syroot.Windows.IO.KnownFolders" Version="1.2.3" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\AppCommon\FileTime.App.Core\FileTime.App.Core.csproj" />
