--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build cli",
-      "program": "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI/bin/Debug/net6.0/FileTime.ConsoleUI.dll",
+      "program": "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI.App/bin/Debug/net6.0/FileTime.ConsoleUI.App.dll",
       "args": [],
-      "cwd": "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI",
+      "cwd": "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI.App",
       "console": "internalConsole",
       "stopAtEntry": false
     },
@@ -20,9 +20,9 @@
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build gui",
-      "program": "${workspaceFolder}/src/GuiApp/Avalonia/FileTime.GuiApp/bin/Debug/net6.0/FileTime.GuiApp.dll",
+      "program": "${workspaceFolder}/src/GuiApp/Avalonia/FileTime.GuiApp.App/bin/Debug/net6.0/FileTime.GuiApp.App.dll",
       "args": [],
-      "cwd": "${workspaceFolder}/src/GuiApp/Avalonia/FileTime.GuiApp/bin/Debug/net6.0",
+      "cwd": "${workspaceFolder}/src/GuiApp/Avalonia/FileTime.GuiApp.App/bin/Debug/net6.0",
       "console": "internalConsole",
       "stopAtEntry": false
     },
