--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
       "type": "process",
       "args": [
         "build",
-        "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
+        "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI.App/FileTime.ConsoleUI.App.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
@@ -19,7 +19,7 @@
       "type": "process",
       "args": [
         "build",
-        "${workspaceFolder}/src/GuiApp/Avalonia/FileTime.GuiApp/FileTime.GuiApp.csproj",
+        "${workspaceFolder}/src/GuiApp/Avalonia/FileTime.GuiApp.App/FileTime.GuiApp.App.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
@@ -31,7 +31,7 @@
       "type": "process",
       "args": [
         "publish",
-        "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
+        "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI.App/FileTime.ConsoleUI.App.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
@@ -43,7 +43,7 @@
       "type": "process",
       "args": [
         "publish",
-        "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
+        "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI.App/FileTime.ConsoleUI.App.csproj",
         "-p:PublishSingleFile=true",
         "-c",
         "Release",
@@ -60,7 +60,7 @@
       "type": "process",
       "args": [
         "publish",
-        "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
+        "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI.App/FileTime.ConsoleUI.App.csproj",
         "-p:PublishSingleFile=true",
         "-c",
         "Release",
@@ -77,7 +77,7 @@
       "type": "process",
       "args": [
         "publish",
-        "${workspaceFolder}/src/GuiApp/Avalonia/FileTime.GuiApp/FileTime.GuiApp.csproj",
+        "${workspaceFolder}/src/GuiApp/Avalonia/FileTime.GuiApp.App/FileTime.GuiApp.App.csproj",
         "-c",
         "Release",
       ],
@@ -90,7 +90,7 @@
       "args": [
         "watch",
         "run",
-        "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI/FileTime.ConsoleUI.csproj",
+        "${workspaceFolder}/src/ConsoleApp/FileTime.ConsoleUI.App/FileTime.ConsoleUI.App.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
