--- a/src/Core/FileTime.Core.Services/FileTime.Core.Services.csproj
+++ b/src/Core/FileTime.Core.Services/FileTime.Core.Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
