--- a/src/Core/FileTime.Core.Abstraction/FileTime.Core.Abstraction.csproj
+++ b/src/Core/FileTime.Core.Abstraction/FileTime.Core.Abstraction.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DynamicData" Version="7.6.7" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
