--- a/src/Providers/FileTime.Providers.Local/FileTime.Providers.Local.csproj
+++ b/src/Providers/FileTime.Providers.Local/FileTime.Providers.Local.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DynamicData" Version="7.6.7" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
