--- a/src/Providers/FileTime.Providers.Local.Abstractions/FileTime.Providers.Local.Abstractions.csproj
+++ b/src/Providers/FileTime.Providers.Local.Abstractions/FileTime.Providers.Local.Abstractions.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>FileTime.Providers.Local</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup>
