Command execution, CreateContainer command WIP

--- a/src/Core/FileTime.Core.Abstraction/FileTime.Core.Abstraction.csproj
+++ b/src/Core/FileTime.Core.Abstraction/FileTime.Core.Abstraction.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\..\Library\InitableService\InitableService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ContentAccess" />
+  </ItemGroup>
+
 </Project>
