--- a/src/Core/FileTime.Core.Command/FileTime.Core.Command.csproj
+++ b/src/Core/FileTime.Core.Command/FileTime.Core.Command.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\FileTime.Core.Abstraction\FileTime.Core.Abstraction.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
   </PropertyGroup>
