--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,6 @@
 dotnet_diagnostic.RCS1196.severity = none
 csharp_style_namespace_declarations = file_scoped:error
 dotnet_diagnostic.IDE0161.severity = error
+csharp_style_var_for_built_in_types = true:warning
+csharp_style_var_when_type_is_apparent = true:warning
+csharp_style_var_elsewhere = true:warning
