Editorconfig use expression bodied method

--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,4 @@ dotnet_diagnostic.IDE0161.severity = error
 csharp_style_var_for_built_in_types = true:warning
 csharp_style_var_when_type_is_apparent = true:warning
 csharp_style_var_elsewhere = true:warning
+csharp_style_expression_bodied_methods = true:warning
