--- a/src/GuiApp/Avalonia/FileTime.GuiApp.App/appsettings.Development.json
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp.App/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Debug",
+      "Default": "Verbose",
       "Override": {
         "Microsoft": "Information",
         "System": "Warning"
