--- a/src/AppCommon/FileTime.App.FuzzyPanel.Abstraction/FileTime.App.FuzzyPanel.Abstraction.csproj
+++ b/src/AppCommon/FileTime.App.FuzzyPanel.Abstraction/FileTime.App.FuzzyPanel.Abstraction.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.0.0-rc1.1" />
+    <PackageReference Include="Avalonia" Version="11.0.0" />
   </ItemGroup>
 
 </Project>
